l_find() micro-optimization

- don't take pin[1] and pin[2] for dummy nodes
- elmininated cur_key and cur_keylen as they're used only once

Part of MDEV-20630 - lf_hash get performance regression since the bucket
                     size won't decrease